# inner-product-transforms

./: .gitignore  00_encoder_mnist.ipynb  00_example_notebook.ipynb  00_generate_mnist_pointclouds.ipynb  00_vae.ipynb  01_01_encoder_mnist.ipynb  01_02_generate_mnist_pointclouds.ipynb  01_02_mnist_latent.ipynb  01_02_vae_mnist.ipynb  01_03_generate_mnist_pointclouds.ipynb  01_encoder_mnist.ipynb  01_example_interpolate.ipynb  01_mlrecon_interpolation_mnist.ipynb  01_mnist_pointclouds_analysis.ipynb  01_vae_mnist.ipynb  02_00_inversion_graphs.ipynb  02_01_encoder_modelnet.ipynb  02_01_inversion_large_graph.ipynb  02_02_inversion_3d.ipynb  02_03_generate_modelnet_pointclouds.ipynb  02_03_inversion_3d.ipynb  02_03_inversion_fingerprint.ipynb  02_04_visualize_modelnet.ipynb  02_modelnet.ipynb  02_modelnet_encoder.ipynb  02_reconstruct_3d.ipynb  02_vae_mnist.ipynb  03_01_encoder_dprites.ipynb  03_02_vae_dsprites.ipynb  03_03_generate_dsprites_pointclouds.ipynb  03_encoder_modelnet.ipynb  04_01_encoder_topological copy.ipynb  04_01_encoder_topological.ipynb  04_02_encoder_topological.ipynb  04_02_vae_topological.ipynb  04_03_generate_topological.ipynb  04_topological.ipynb  04_topological_3d.ipynb  04_vae_modelnet.ipynb  05_01_encoder_bzr.ipynb  (+111 more)
.jukit/: .jukit_info.json
archive/: evaluate_rotation.py  inference_time.py  scratch_kl.py  scratch_kl_div.py  scratch_profile.py  test_dataset.py  test_encoder.py  vizualize_dataset.ipynb  vizualize_persistestentLandscapes.ipynb
configs/: config_encoder_bzr.yaml  config_encoder_dsprites.yaml  config_encoder_mnist.yaml  config_encoder_mnist_rotated.yaml  config_encoder_modelnet.yaml  config_encoder_shapenet.yaml  config_encoder_shapenet_airplane.yaml  config_encoder_shapenet_airplane_scaled.yaml  config_encoder_shapenet_car.yaml  config_encoder_shapenet_car_scaled.yaml  config_encoder_shapenet_chair.yaml  config_encoder_shapenet_chair_sparse.yaml  config_encoder_topological.yaml  config_encoder_topological_3d.yaml  config_vae_dsprites.yaml  config_vae_mnist.yaml  config_vae_modelnet.yaml  config_vae_shapenet.yaml  config_vae_shapenet_airplane.yaml  config_vae_shapenet_car.yaml  config_vae_shapenet_chair.yaml  config_vae_topological.yaml  config_vae_topological_3d.yaml  dev_encoder_airplane.yaml  dev_encoder_mnist.yaml  dev_encoder_multiclass.yaml  encoder_128_airplane.yaml  encoder_airplane.yaml  encoder_airplane_128.yaml  encoder_airplane_64.yaml  encoder_attn_airplane.yaml  encoder_car.yaml  encoder_car_64.yaml  encoder_chair.yaml  encoder_chair_128.yaml  encoder_chair_64.yaml  encoder_chair_big.yaml  encoder_chair_sparse.yaml  encoder_chamfer_airplane.yaml  encoder_chamfer_car.yaml  (+76 more)
datasets/: __init__.py  args.json  base_dataset.py  config.py  dsprites.py  gnn_benchmark.py  manifold.py  mnist.py  mnist_bu.py  mnist_rotated.py  modelnet.py  shapenet.py  shapenetcore.py  shapenetcore_bu.py  shrec.py  topological.py  transforms.py  transforms_bu.py  tu.py
dependencies/: Makefile  README.md  pyproject.toml
dependencies/PyTorchEMD/: pyproject.toml
dependencies/PyTorchEMD/src/pytorchemd/: __init__.py
dependencies/chamfer3D/: pyproject.toml
dependencies/chamfer3D/src/chamfer3d/: __init__.py
layers/: config.py  directions.py  ect.py  ect_bu.py  wect.py
metrics/: accuracies.py  evaluation.py  evaluation_metrics.py  loss.py  metrics.py
metrics_orig/: loss.py
models/: base.py  ect2point.py  ectencoder.py  ectencoder_dsprites.py  ectencoder_mnist.py  ectencoder_modelnet.py  encoder.py  encoder_3d.py  encoder_diffusion.py  encoder_scaled.py  encoder_sparse.py  vae.py  vae_mnist.py  vae_modelnet.py  vae_scaled.py  vqvae.py
my_test/: widgets.ipynb
notebooks/: 00_vae.ipynb  01_01_mnist_interpolation.ipynb  01_02_mnist_latent.ipynb  02_02_inversion_letter_low.ipynb  06_learned_rotation_mnist.ipynb  32_interpolate_mnist.ipynb  99_model.ipynb  critical_differences.ipynb  datachecks.ipynb  datachecks.py  development.ipynb  fid_generation.ipynb  helper_evaluate.py  helper_plotting.py  helper_train.py  lion.ipynb  plot_mnist.py  plot_sv.py  plot_unet.py  ranks.ipynb  rebuttal_completion.py  rebuttal_dirs.py  rebuttal_table.py  rebuttal_table_large.py  recon_gen.ipynb  test.ipynb  visualize_interpolation.ipynb  visualize_interpolation.py  visualize_model_output.ipynb  visualize_model_performance.py  visualize_tables.ipynb  voxel_grid.ipynb  waterfall.ipynb
reconstruction/: 2d.py  3d.py  recon_2d.py
renderers/: pointcloud.py
results/: noise_ambient.csv  noise_blur.csv  noise_gaussian.csv
sbatch/: create_dataset.sbatch  create_shapenet.sbatch  job.sbatch  mnist.sbatch  multi.sbatch  multi_eval.sbatch  train_unet_airplane.sbatch  train_vae.sbatch  train_vae_airplane.sbatch  train_vae_car.sbatch  train_vae_chair.sbatch  vae_multiclass_full.sbatch
scratch/: 00_vae.ipynb  01_00_mnist_pointclouds_analysis.ipynb  01_01_mnist_interpolation.ipynb  01_02_mnist_latent.ipynb  02_03_inversion_mnist.ipynb  02_modelnet.ipynb  02_modelnet_encoder.ipynb  03_01_inversion_3d.ipynb  03_02_inversion_alchemy_full.ipynb  03_03_inversion_bzr.ipynb  03_generate_dsprites_pointclouds.ipynb  04_01_topological_vae.ipynb  04_topological.ipynb  06_learned_rotation_mnist.ipynb  32_interpolate_mnist.ipynb  99_generate_dsprites_mnist_dsprites.ipynb  99_iradon_interpolation.ipynb  99_model.ipynb  evaluate_mnist_ambient_noise.py  evaluate_mnist_blur_noise.py  evaluate_mnist_gaussian_noise.py  evaluate_rotation.py  helper_evaluate.py  helper_plotting.py  helper_train.py  helper_utils.py  scratch.py  scratch_kl.py  scratch_kl_div.py  scratch_models.py  scratch_shapenet.py  synth_id_to_category.py  visualize_rotation.py  vizualize_dataset.ipynb  vizualize_loss.ipynb  vizualize_persistestentLandscapes.ipynb
scripts/: download_data.sh  evaluate_nna.sh  test_all.sh  test_downsample.sh  test_downsample_bu.sh  test_lower.sh  test_render_ablation.sh  test_render_shapenet.sh  train.sh  train_all.sh  train_downsample.sh  train_eval_airplane.sh  train_eval_vae_car.sh  train_layernorm_all.sh  train_lower.sh
shapesynthesis/: ablation_gradient.py  ablation_gradient_single.py  (+53 more)
(+187 files in other folders)
