[project]
name = "shapesynthesis"
version = "0.1.0"
description = "Topological shape synthesis"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
readme = "README.md"
dependencies = [
    "torch>=2.5.1,<3",
    "lightning>=2.4.0,<3",
    "torch-geometric>=2.6.1,<3",
    "torchvision>=0.20.1,<0.21",
    "kaolin",
    "tensorboard>=2.18.0,<3",
    "tensorboardx>=2.6.2.2,<3",
    "scikit-image>=0.25.0,<0.26",
    "pydantic>=2.10.4,<3",
    "wandb>=0.19.1,<0.20",
    "matplotlib>=3.10.0,<4",
    "pyvista[jupyter]>=0.44.2,<0.45",
    "open3d>=0.18.0,<0.19",
    "scikit-learn>=1.6.0,<2",
    "addict>=2.4.0,<3",
    "trame>=3.7.6,<4",
    "ipywidgets>=8.1.5,<9",
    "ipykernel>=6.29.5,<7",
    "torch-fidelity>=0.3.0",
    "chamfer3d",
    "pytorchemd",
]

[dependency-groups]
dev = [
    "poethepoet>=0.25.0,<0.26",
    "ipykernel>=6.29.5,<7",
]
vis = [
    "pytest>=8.3.4,<9",
    "pandas>=2.2.3,<3",
]

[tool.uv]
default-groups = [
    "dev",
    "vis",
]

[[tool.uv.index]]
name = "kaolin-source"
url = "https://nvidia-kaolin.s3.us-east-2.amazonaws.com/index.html"
explicit = true

[tool.uv.sources]
kaolin = { url = "https://nvidia-kaolin.s3.us-east-2.amazonaws.com/torch-2.5.1_cu124/kaolin-0.17.0-cp310-cp310-linux_x86_64.whl" }
chamfer3d = { workspace = true }
pytorchemd = { workspace = true }

[tool.uv.workspace]
members = ["dependencies/PyTorchEMD", "dependencies/chamfer3D"]



[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["shapesynthesis"]



