[project]
name = "dependencies"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10, <3.13"
dependencies = [
    "torch>=2.5.1,<3",
    "setuptools==80.7.1",
    "ninja>=1.13.0",
    "torchvision>=0.24.0",
    "chamfer-3d",
    "emd-ext",
]

[tool.uv.sources]
chamfer-3d = { path = "dist/chamfer_3d-0.0.0-cp310-cp310-linux_x86_64.whl" }
emd-ext = { path = "dist/emd_ext-0.0.0-cp310-cp310-linux_x86_64.whl" }
