[project]
name = "pytorchemd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ernst Röell", email = "ernstroell@gmail.com" }
]
requires-python = ">=3.10, <3.13"
dependencies = []

[project.scripts]
pytorchemd = "pytorchemd:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
